# grim

./: AreaPotential.hpp  BuildingPotential.hpp  CMakeLists.txt  CommaSeparatedValue.hpp  GeographicalPosition.hpp  GeographicalShape.hpp  NI.cpp  NI.hpp  PointInPolygon.hpp  Potential.hpp  Potentials.hpp  README.md  SHPData.hpp  Target.hpp  Targets.hpp  main.cpp
test/: assoziation_test.cpp  csv_test.cpp  load_test.cpp  point_point_test.cpp
